--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ github: https://github.com/viewerw/
 baseurl: ""
 description: !
 meta_description: wwy人博客;学而不思则罔;思而不学则殆;生命不止;折腾不休
-motto: It's our wits that make us men.
+motto: 这是个没人关注的博客，作者 很懒。作者喜欢编码，喜欢吃鸡，喜欢DOTA。We should have a dream,just in case it will come true some day.
 banner: 学而不思则罔，思而不学则殆。
 
 #permalink: /:categories/:year/:month/:day/:title/
