--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-name: Less Or More
+name: 前端攻城狮viewerw的小窝
 email: 15601598900@126.com
 author: viewerw
 url: http://www.wwyuan.cn
 github: https://github.com/viewerw/
 baseurl: ""
-description: !
+description: nodejs、vue、webpack、elmentui
 meta_description: wwy人博客;学而不思则罔;思而不学则殆;生命不止;折腾不休
 motto: 这是个没人关注的博客，作者 很懒。作者喜欢编码，喜欢吃鸡，喜欢DOTA。We should have a dream,just in case it will come true some day.
 banner: 学而不思则罔，思而不学则殆。
